# PNL

./: .clinerules  .gitignore  DOCUMENTATION.md  Despliegue_Colab.ipynb  Planteamiento.docx  README.md  comentarios_oviedo_full.csv  main.py  migrate_cache.py  pyproject.toml  requirements.txt  test_bypass.py  test_gradio_serialization.py  test_serialization.py
docs/: ANALISIS_TECNICO_SENIOR.md  ARCHITECTURE.md  NLP_PIPELINE.md  TECH_STACK.md
src/: __init__.py
src/controllers/: dashboard_controller.py
src/core/: __init__.py  theme.py
src/models/: __init__.py  clustering.py  embeddings.py  metrics.py  ner.py  preprocessing.py  projection.py  rag.py  sentiment.py  tfidf.py
src/models/rag/: __init__.py  generator.py  retriever.py  system.py
src/services/: dashboard_state_service.py  pipeline_cache_repository.py  pipeline_service.py
src/services/stages/: __init__.py  base.py  cleaning.py  clustering.py  embeddings.py  ner.py  rag.py  sentiment.py  tfidf.py
src/views/: __init__.py  clustering_charts.py  eda_charts.py  ner_charts.py  sentiment_charts.py  tfidf_charts.py  ui_mapper.py  web_app.py
